--- a/src/main/webapp/Views/Secured/Reports/ReportProvider.xhtml
+++ b/src/main/webapp/Views/Secured/Reports/ReportProvider.xhtml
@@ -97,9 +97,15 @@
 
 				<h:form id="frmMain">
 
-					<p:dataTable value="#{reportsController.transactions}" var="transaction" >
+					<p:dataTable
+				     
+				      value="#{reportsController.lazyModel}" var="transaction"
+				      lazy="true" paginator="true" 
+				      rows="10"
+				      rowsPerPageTemplate="10,20,35"
+				       >
 
-						<p:column headerText="Provider Name" filterBy="#{transaction.provider.getFullName()}" filterMatchMode="contains">
+						<p:column headerText="Provider Name" filterBy="#{getFullName}" filterMatchMode="contains">
 							#{transaction.provider.firstName} #{transaction.provider.lastName}
 						</p:column>
 
