--- a/src/main/webapp/Views/Secured/Reports/ReportPractice.xhtml
+++ b/src/main/webapp/Views/Secured/Reports/ReportPractice.xhtml
@@ -130,7 +130,13 @@
 
 				<h:form id="frmMain">
 
-					  <p:dataTable value="#{reportsController.transactions}" var="transaction" >
+					  <p:dataTable
+				     filteredValue="#{reportsController.filteredTransactions}"
+				      value="#{reportsController.lazyModel}" var="transaction"
+				      lazy="true" paginator="true" 
+				      rows="10"
+				      rowsPerPageTemplate="10,20,35"
+				       >
 
 						<p:column headerText="Practice Name" filterBy="#{transaction.practice.name}" filterMatchMode="contains">
 							#{transaction.practice.name}
