--- a/src/main/webapp/Views/Secured/Reports/ReportProvider.xhtml
+++ b/src/main/webapp/Views/Secured/Reports/ReportProvider.xhtml
@@ -24,9 +24,11 @@
 						 <!-- <p:outputLabel for="idProviders" value="Select Provider: " />  -->
 						 <p:selectOneMenu id="idProviders" value="#{reportsController.currentProviderId}"
 								panelStyle="width:180px" effect="fade" converter="javax.faces.Integer"
-								 style="width:177px" >
+								 style="width:177px"
+								 onchange="submit(),PF('transactionsTable').filter()"
+								  >
 								<!-- var="t" -->
-								<!-- <p:ajax event="change" listener="#{reportsController.onEntityChange}" update="idPayers" /> -->
+								 <!-- <p:ajax event="change" listener="#{reportsController.onEntityChange}" update="idPayers" /> -->
 								
 								<f:selectItem itemLabel="Select Provider" />
 								<f:selectItems value="#{reportsController.providerList}" var="entity"
@@ -36,28 +38,12 @@
 									<h:outputText value="#{t.firstName} #{t.lastName}" />
 								</p:column> -->
 							</p:selectOneMenu> 
-							
-							
-						<!-- <p:selectCheckboxMenu id="idProviders" value="#{reportsController.selectedProviderList}" label="Select Providers"
-				            filter="true" filterMatchMode="startsWith" style="width:177px"  var="t"
-				            converter="providerConverter" panelStyle="width:250px">
-				            
-				             <p:ajax event="change" listener="#{reportsController.onEntityChange}" update="idPayers" /> 
-				            
-				            <f:selectItems value="#{reportsController.providerList}" var="entity"
-									itemLabel="#{entity.firstName} #{entity.lastName}" itemValue="#{entity}"  />
 
-							<p:column>
-								<h:outputText value="#{t.firstName} #{t.lastName}" />
-							</p:column>
-				            
-				        </p:selectCheckboxMenu> -->
-							
-							
-						<!-- <h:outputLabel value="Select Payer: " /> -->
 						<p:selectCheckboxMenu id="idPayers" value="#{reportsController.selectedPayerIdList}" label="Select Payers"
 				            filter="true" filterMatchMode="startsWith" style="width:177px"  
-				            converter="javax.faces.Integer" panelStyle="width:250px">
+				            converter="javax.faces.Integer" panelStyle="width:250px"
+				            onchange="submit(),PF('transactionsTable').filter()"
+				            >
 				            <!-- var="t" -->
 				            <f:selectItems value="#{reportsController.payerList}" var="payer"
 								itemLabel="#{payer.name} #{payer.planName}" itemValue="#{payer.id}"  />
@@ -69,23 +55,15 @@
 				        </p:selectCheckboxMenu>
 				        
 				        <!-- <h:outputLabel for="status" value="Select Status:" /> -->
-			        	<p:selectOneMenu value="#{reportsController.currentPayerStatus}" style="width:175px">
+			        	<p:selectOneMenu value="#{reportsController.currentPayerStatus}" style="width:175px"
+			        	onchange="submit(),PF('transactionsTable').filter()"
+			        	>
 			        	
 			        	<f:selectItem itemLabel="Select Status" />
 			        	
 			        	<f:selectItems value="#{reportsController.statusList}" var="v"
-			        		itemLabel="#{v}" itemValue="#{v}"/>
-			        		
-<!-- 			        		
-				            <f:selectItem itemLabel="PAR" itemValue="PAR" />
-				            <f:selectItem itemLabel="Non-Par" itemValue="Non-Par" />
-				            <f:selectItem itemLabel="Application Package Complete" itemValue="Application Package Complete" />
-				            <f:selectItem itemLabel="Application Filed" itemValue="Application Filed" />
-				            <f:selectItem itemLabel="Application Accepted" itemValue="Application Accepted" />
-				            <f:selectItem itemLabel="Application Rejected" itemValue="Application Rejected" />
-				            <f:selectItem itemLabel="Effective Date Assigned" itemValue="Effective Date Assigned" />
-				            <f:selectItem itemLabel="Letter Received" itemValue="Letter Received" />
- -->				        </p:selectOneMenu>
+			        		itemLabel="#{v}" itemValue="#{v}"/>			        		
+				        </p:selectOneMenu>
 					
 						<p:commandButton value="Search" update=":frmMain"
 							action="#{reportsController.filterReport()}" />
@@ -98,7 +76,7 @@
 				<h:form id="frmMain">
 
 					<p:dataTable
-				     
+				     widgetVar="transactionsTable"
 				      value="#{reportsController.lazyModel}" var="transaction"
 				      lazy="true" paginator="true" 
 				      rows="10"
