Code majore refactoring

--- a/src/main/webapp/Views/Secured/Payer/PayerView.xhtml
+++ b/src/main/webapp/Views/Secured/Payer/PayerView.xhtml
@@ -44,7 +44,7 @@
 						<table>
 						<ui:repeat var="plan" value="#{payer.plans}">
 						<tr>
-						<td>
+						<td style="border: 0px;">
 						#{plan.name}
 						</td>
 						</tr>
